# mini_insta_gui_based

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/db/: Database.cpp  Database.h
src/gui/: UIManager.cpp  UIManager.h
